--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     font-family: 'Roboto', sans-serif;
 }
 
+img {
+    border-color: rgb(149, 204, 255);
+    border-style: solid;
+}
+
 body {
     background-color: rgb(208, 253, 255);
 }
